--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -62,6 +62,7 @@ It is threatened by habitat loss.
         </div>
         <div class="col-xs-3 col-lg-3">
           <a  href="blog">  <i class="fa fa-terminal"></i>  blog</a> 
+          <a  href="GSPS">  <i class="fa fa-terminal"></i>  GSPS</a> 
           <img src="{{ site.baseurl }}{{ site.data.personal.picture }}" 
                class="img-circle"
                style="margin-top:-6px;width:90px;border:2px solid rgba(255,255,255,0.75)">     
