add gsps_all dir and gsps.html

--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -65,7 +65,7 @@ It is threatened by habitat loss.
                class="img-circle"
                style="margin-top:-6px;width:90px;border:2px solid rgba(255,255,255,0.75)"> 
           <a  href="blog">  <i class="fa fa-terminal"></i>  blog</a> 
-          <a  href="GSPS">  <i class="fa fa-terminal"></i>  GSPS</a>     
+          <a  href=gsps_all/gsps.html>  <i class="fa fa-terminal"></i>  GSPS</a>     
         </div>
       </div>
     </div>
