--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -60,12 +60,17 @@ It is threatened by habitat loss.
             {{ site.data.personal.label }}
           </h2>
         </div>
-        <div class="col-xs-3 col-lg-3">
+
+        <div class="col-xs-1 col-lg-1">
           <img src="{{ site.baseurl }}{{ site.data.personal.picture }}" 
                class="img-circle"
                style="margin-top:-6px;width:90px;border:2px solid rgba(255,255,255,0.75)"> 
-          
-          <a  href="blog">  <i class="fa fa-terminal"></i>  blog</a>     
+        </div> 
+        <div class="col-xs-1 col-lg-1">
+            <a  href="blog">  <i class="fa fa-terminal"></i>  blog</a> 
+          <!-- <div class="row">
+            <a  href="https://stevans.github.io/gsps/">  <i class="fa fa-terminal"></i>  gsps</a> 
+          </div> -->
         </div>
       </div>
     </div>
@@ -264,7 +269,9 @@ It is threatened by habitat loss.
                style="float:left;margin-right:5px;width:20px;height:20px;">
           Powered by 
           <a href="http://www.elbowpatched.com">
-            Elbowpatched
+            Elbowpatched</a>. 
+          Cribbed from <a href="http://gully.github.io/">
+            Gully.
           </a>
         </div>
       </div>
