--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -52,7 +52,7 @@ It is threatened by habitat loss.
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-xs-9 col-lg-9">
+        <div class="col-xs-12 col-md-12 col-lg-9">
           <h1>
             {{ site.data.personal.name }}
           </h1>
@@ -61,12 +61,12 @@ It is threatened by habitat loss.
           </h2>
         </div>
 
-        <div class="col-xs-1 col-lg-1">
+        <div class="col-xs-1 col-md-1 col-lg-1">
           <img src="{{ site.baseurl }}{{ site.data.personal.picture }}" 
                class="img-circle"
                style="margin-top:-6px;width:90px;border:2px solid rgba(255,255,255,0.75)"> 
         </div> 
-        <div class="col-xs-1 col-lg-1">
+        <div class="col-xs-1 col-md-1 col-lg-1">
             <a  href="blog">  <i class="fa fa-terminal"></i>  blog</a> 
           <!-- <div class="row">
             <a  href="https://stevans.github.io/gsps/">  <i class="fa fa-terminal"></i>  gsps</a> 
