make all rows in albertine fuild

--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -136,7 +136,7 @@ It is threatened by habitat loss.
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row-fluid">
       <section class="col-md-9">
         <h3>Publications</h3>
 
@@ -179,14 +179,14 @@ It is threatened by habitat loss.
   <!-- PROJECTS -->
   <!-- ==================== -->
   <section class="container">
-    <div class="row">
+    <div class="row-fluid">
       <div class="col-md-9">
         <h3>Projects</h3>
       </div>
     </div>
 
     {% for project in site.data.projects %}
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-xs-4
                     col-sm-3
                     col-md-3
@@ -223,14 +223,14 @@ It is threatened by habitat loss.
   <!-- PRESENTATIONS -->
   <!-- ==================== -->
   <section class="container">
-    <div class="row">
+    <div class="row-fluid">
       <div class="col-md-9">
         <h3>Presentations</h3>
       </div>
     </div>
 
     {% for presentation in site.data.presentations %}
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-md-9">
           <p>
             <b>
@@ -258,12 +258,12 @@ It is threatened by habitat loss.
   <!-- ==================== -->
   <footer>
     <div class="container">
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-xs-12">
           <hr>
         </div>
       </div>
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-xs-12">          
           <img src="{{ site.baseurl }}/img/elbowpatched-icon.svg" alt="Elbowpatched"
                style="float:left;margin-right:5px;width:20px;height:20px;">
