expand page tile and add icon

--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -25,7 +25,10 @@ It is threatened by habitat loss.
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{{ site.data.personal.name }}</title>
+  <title>{{ site.data.personal.name }} - Astronomer | Homepage</title>
+
+  <!-- favorite icon that looks like a planet!! -->
+  <link rel="shortcut icon" href="planet.ico">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,700">
