--- a/_layouts/albertine.html
+++ b/_layouts/albertine.html
@@ -28,7 +28,7 @@ It is threatened by habitat loss.
   <title>{{ site.data.personal.name }} - Astronomer | Homepage</title>
 
   <!-- favorite icon that looks like a planet!! -->
-  <link rel="shortcut icon" href="planet.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/planet.ico?">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,700">
